# tig

./: .gitignore  .pylintrc  CHANGELOG.md  CONTRIBUTING.md  README.md  example_vars.csv  pyproject.toml
.github/workflows/: .release-created.yml  build.yml  wait-for-pypi.py
docker/: Dockerfile  Readme.md  build-docker.sh  lambdaDockerfile  lambdaDockerfileArm  push-docker-artifactory.sh  push-docker-ecr.sh
docs/: conf.py  index.rst
jenkins/: Jenkinsfile
podaac/lambda_handler/: clean_lambda_handler.py  lambda_handler.py
podaac/lambda_handler/cumulus_cli_handler/: handlers.py
podaac/tig/: cli.py  generate_config.py  generate_hitide_config.py  generate_thumbnails.sh  tig.py
regression_test/: regression.py
terraform/: README.md  output.tf  tig_ecr.tf  tig_ecs.tf  tig_fargate.tf  tig_lambda.tf  variable.tf
terraform/fargate/: fargate.tf  main.tf  variable.tf
terraform_deploy/: README.md  iam.tf  iam_step.tf  main.tf  override.py  s3.tf  step.tf  terraform.tf  tig.tf  variable.tf
terraform_deploy/tfvars/: ops.tfvars  sit.tfvars  uat.tfvars
tests/: input.txt  test_lambda_handler.py  test_lambda_handler_cleaner.py  test_tig.py
tests/configs/: PODAAC-CYGNS-C2H10.cfg  SWOT_SIMULATED_L2_NADIR_SSH_ECCO_LLC4320_CALVAL_V1_leading_slash.cfg  SWOT_SIMULATED_L2_NADIR_SSH_ECCO_LLC4320_CALVAL_V1_no_leading_slash.cfg
tests/input/: SWOT_GPR_2PTP003_005_20111115_030538_20111115_035643.nc
tests/palettes/: paletteMedspirationIndexed.json
