[tool.poetry]
name = "podaac-tig"
version = "0.12.0"
description = "Tool for Image Generation (TIG)"
authors = ["podaac-tva <podaac-tva@jpl.nasa.gov>"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.jpl.nasa.gov/podaac/tig"
classifiers = [
    "Topic :: Software Development :: Libraries :: Python Modules"
]
exclude = ['contrib', 'docs', 'tests']
packages = [
    { include = "podaac" },
]

[tool.poetry.dependencies]
python = ">=3.10, <3.13"
numpy = "^1.26.4"
matplotlib = "^3.8.3"
netCDF4 = "^1.6.5"
xarray = "^2024.2.0"
imageio = "^2.34.0"
pygeogrids = "^0.5.0"
cumulus-process = "^1.3.0"
requests = "^2.31.0"
click = "^8.1.7"
scipy = "^1.12.0"

[tool.poetry.dev-dependencies]
pytest = "^8.0.1"
flake8 = "^7.0.0"
pytest-cov = "^5"
pylint = "^3.0.3"
Sphinx = "^7.2.6"
moto = "^4.2.14"
mock = "^5.1.0"

[tool.poetry.scripts]
tig = 'podaac.tig.cli:main'
generate_hitide_config = 'podaac.tig.generate_hitide_config:generate_hitide_config_command'

[tool.poetry.group.dev.dependencies]
scikit-image = "^0.22.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
